--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       movement, <a href="http://learnenough.com/email">sign up for our official email list</a> now.
     </p>
 
+    <a href="http://twitter.com/learnenough" target="_blank" style="text-decoration: none;">
+        <img src="FILL_IN">
+      </a>
+
+      You should follow Learn Enough on Twitter
+      
+      <a href="http://twitter.com/learnenough" target="_blank">here</a>.
+
     <p>
     	HTML was created by the original "web developer", computer scientist
       <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
@@ -26,7 +34,7 @@
       share pictures of his cat, but it would be cool if it were.
     </p>
 
-    <img src="images/kitten.jpg" alt="Kitten">	
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"><img src="images/kitten.jpg" alt="Kitten"></a>	
 
     <h2>Background</h2>
 
