Add a moby dick page and a menu

--- a/tags.html
+++ b/tags.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
 
   	<h1>Important HTML Tags</h1>
 
@@ -62,7 +68,16 @@
         <td>table data</td>
         <td>include a table data cell</td>
       </tr>
-
+      <tr>
+        <td><code>header</code></td>
+        <td>header</td>
+        <td>makes a header</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>page division</td>
+        <td>makes a page divide</td>
+      </tr>
     </table> 
 
     <h2>Inline Elements</h2>
@@ -110,6 +125,13 @@
         <td><code>&lt;code&gt;great example&lt;/code&gt;</code></td>
         ><td><code>great example</code></td>
       </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>code</td>
+        <td></td>
+        <td></td>
+      </tr>
+      
     </table>
 
 
