--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     
-  	<div>
+  	<div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
     </div>
-    
+
     <h1>The Learn Enough Story</h1>
 
     <p>
@@ -40,7 +40,21 @@
       share pictures of his cat, but it would be cool if it were.
     </p>
 
-    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"><img src="images/kitten.jpg" alt="Kitten"></a>	
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"><img src="images/kitten.jpg" alt="Kitten"></a>
+
+    <h3>Quotations</h3>
+
+    <p>
+    	In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background-color: #8d96a3">
+    <p>
+    	<em>Don't believe every quote you read on the Internet.</em>
+    	<br>-Abraham Lincoln
+    </p>
+    </blockquote>
 
     <h2>Background</h2>
 
